# t8code

./: Makefile.am
example/: Makefile.am
example/2_5dimension/: Makefile.am  example.cxx
src/: Makefile.am  t8_cmesh.h
src/t8_cmesh/: t8_cmesh.c  t8_cmesh.cxx  t8_cmesh_examples.cxx  t8_cmesh_examples.h  t8_cmesh_trees.c  t8_cmesh_trees.h  t8_cmesh_vtk_writer.c
src/t8_forest/: t8_forest.c  t8_forest_general.h  t8_forest_private.h
src/t8_schemes/t8_2_5dimension/: Makefile.am  t8_2_5D.cxx  t8_2_5D.hxx  t8_2_5_cxx.hxx  t8_2_5dimension_cxx.cxx  t8_2_5dimension_cxx.hxx  t8_2_5dimension_element_cxx.cxx  t8_2_5dimension_element_cxx.hxx  t8_2_5dimension_element_cxx.txx
src/t8_schemes/t8_default/t8_default_common/: t8_default_common_cxx.cxx  t8_default_common_cxx.hxx
src/t8_schemes/t8_default/t8_default_hex/: t8_default_hex_cxx.cxx  t8_default_hex_cxx.hxx
src/t8_schemes/t8_default/t8_default_line/: t8_default_line_cxx.cxx  t8_default_line_cxx.hxx  t8_dline_bits.c
src/t8_schemes/t8_default/t8_default_prism/: t8_default_prism_cxx.cxx  t8_default_prism_cxx.hxx
src/t8_schemes/t8_default/t8_default_pyramid/: t8_default_pyramid_cxx.cxx  t8_default_pyramid_cxx.hxx
src/t8_schemes/t8_default/t8_default_quad/: t8_default_quad_cxx.cxx  t8_default_quad_cxx.hxx
src/t8_schemes/t8_default/t8_default_tet/: t8_default_tet_cxx.cxx  t8_default_tet_cxx.hxx
src/t8_schemes/t8_default/t8_default_tri/: t8_default_tri_cxx.cxx  (+1 more)
tutorials/: Makefile.am
tutorials/2_5D/: t8_uniform_forest.cxx
tutorials/general/: t8_step1_coarsemesh.cxx  t8_step2_uniform_forest.cxx
(+2 files in other folders)
