# This file is part of t8code
# Non-recursive Makefile.am in src/t8_schemes/t8_2_5dimension
# Included from toplevel directory

libt8_installed_headers_schemes_2_5dimension += \
  src/t8_schemes/t8_2_5dimension/t8_2_5dimension_cxx.hxx \
  src/t8_schemes/t8_2_5dimension/t8_2_5dimension_element_cxx.hxx \
  src/t8_schemes/t8_2_5dimension/t8_2_5D.hxx

libt8_compiled_sources += \
  src/t8_schemes/t8_2_5dimension/t8_2_5dimension_cxx.cxx \
  src/t8_schemes/t8_2_5dimension/t8_2_5dimension_element_cxx.cxx \
  src/t8_schemes/t8_2_5dimension/t8_2_5D.cxx